force-app/main/default/objects/MSN_AllowedAssetTypes__c/MSN_AllowedAssetTypes__c.object-meta.xml
<CustomObject>
    <description>Used to define the allowed Asset Types (eg a Water Meter, Service Line etc) for a specific  Work Type (aka &quot;Activity Codes&quot;). For example, on a &quot;Water Meter&quot; only certain Work Types are available - like &quot;Replace Water Meter&quot;. This is used in the Field Service Mobile App in the Flow &quot;Add installed asset&quot; after the user has chosen a new asset to add to their job and then presents the user with a filtered picklist of only those Activity Codes/Work Types to choose from that are allowed for the asset type they were choosing.</description>
    <label>Allowed Asset Type</label>
    <nameField>
        <displayFormat>AAT-{0000}</displayFormat>
        <label>Allowed Asset Types Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowed Asset Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>