force-app/main/default/objects/MSN_AllowedAssetTypes__c/fields/MSN_AllowedAssetType__c.field-meta.xml
<CustomField>
    <fullName>MSN_AllowedAssetType__c</fullName>
    <description>Used to select the allowed &quot;Asset Type&quot; from the global picklist that is also used on the Asset record to define its type.</description>
    <inlineHelpText>Please select the Asset Type that should be allowed for the parent Work Type</inlineHelpText>
    <label>Allowed Asset Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Type</valueSetName>
    </valueSet>
</CustomField>