force-app/main/default/objects/MSN_AllowedAssetTypes__c/fields/MSN_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_Work_Type__c</fullName>
    <description>Master-Detail Lookup to the Parent &quot;Work Type&quot; this Allowed Asset Type record belongs to.</description>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Allowed Asset Types</relationshipLabel>
    <relationshipName>Allowed_Asset_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>