force-app/main/default/objects/MSN_AllowedAssetTypes__c/fields/MSN_WorkTypeName__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkTypeName__c</fullName>
    <description>Cross object formula to concatenate the Work Type &quot;name&quot; and &quot;activity code&quot; in order to show it to a Mobile User when querying for allowed Activity Codes after adding an additional asset to a job from the mobile app.</description>
    <formula>MSN_Work_Type__r.Name+&quot; (&quot;+MSN_Work_Type__r.MSN_ActivityCode__c+&quot;)&quot;</formula>
    <label>Work Type Name</label>
    <type>Text</type>
</CustomField>