force-app/main/default/objects/MSN_AllowedAssetTypes__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Allowed Asset Types (Work Type)</relationshipLabel>
    <relationshipName>Allowed_Asset_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>